build initial ontology db and basic service
